@@ -3,8 +3,8 @@
 
 	<data>
 		<key>business</key>
-		<version>5.0.6</version>
-		<lastMod>2012-11-14</lastMod>
+		<version>5.0.7</version>
+		<lastMod>2012-11-21</lastMod>
 
 		<name><![CDATA[Business]]></name>
 		<description><![CDATA[Valider les dernières commandes et régler votre boutique en ligne]]></description>
